# zapchasti-parser

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: run_bulk.py  run_continuous.py  run_search.py
src/collectors/: base.py
src/collectors/parts/: autoopt.py  hespareparts.py
src/collectors/search/: __init__.py  contact_extractor.py  cross_reference.py  engine.py  google.py  models.py  query_generator.py  ranker.py  site_parser.py  task_worker.py  writer.py
src/collectors/suppliers/: agroserver.py  avito.py  della.py  dgis.py  exkavator.py  orgpage.py
src/config/: database.py  settings.py  sources.yaml
src/models/: supplier.py
src/pipeline/: classifier.py  deduplicator.py  enricher.py  normalizer.py  writer.py
src/scheduler/: manager.py
src/utils/: http.py  llm.py  logging.py
